# gender-based-data-science

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
notebooks/: 01_eda_template.ipynb
scripts/: run_baseline.py  run_dashboard.py  run_district_vulnerability_index.py  run_lfs_district_analytics.py  run_opportunity_map.py  run_rwanda_visibility.py  run_women_opportunity.py
src/gsd/: __init__.py  config.py  data.py  modeling.py  opportunity.py  visibility.py
tests/: test_dashboard.py  test_data.py  test_opportunity.py  test_visibility.py  test_vulnerability_index.py
